--- a/start-here/package.json
+++ b/start-here/package.json
@@ -11,6 +11,13 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "parcel-bundler": "^1.12.5"
-  }
+    "eslint": "^8.55.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.29.0",
+    "parcel-bundler": "^1.12.5",
+    "prettier": "^3.1.0"
+  },
+  "browserslist": [
+    "last 2 Chrome version"
+  ]
 }
